@@ -1,5 +1,6 @@
 * Fix a bug that prevented dithering from being used
 * Honour the system locale; allow the full character set in track names
+* When searching, match characters in other locales
 
 v1.6 (2016-08-13)
 -----------------
